--- a/rebar.config
+++ b/rebar.config
@@ -60,7 +60,11 @@
     {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
     %% for some reason this is only in default
 
-    {copy, "share", "share"},
+    {copy, "share/chunter-diag", "share/chunter-diag"},
+    {copy, "share/chunter.xml", "share/chunter.xml"},
+    {copy, "share/guess_ip.sh", "share/guess_ip.sh"},
+    {copy, "share/lib", "share/lib"},
+
     {copy, "_build/default/lib/fifo_utils/priv/update_config.sh", "share/"},
     {template, "schema/chunter.schema", "share/schema/00-chunter.schema"},
     {template, "_build/default/lib/bugsnag/priv/bugsnag.schema", "share/schema/01-bugsnag.schema"},
