--- a/rebar.config
+++ b/rebar.config
@@ -15,10 +15,10 @@
   jsxd,
   fifo_utils,
   {fifo_s3, ".*", {git, "https://github.com/project-fifo/fifo_s3.git", {branch, "master"}}},
-  {libsniffle, ".*", {git, "https://github.com/project-fifo/libsniffle.git", {branch, "test"}}},
-  {libchunter, ".*", {git, "https://github.com/project-fifo/libchunter.git", {branch, "test"}}},
-  {libsnarl, ".*", {git, "https://github.com/project-fifo/libsnarl.git", {branch, "test"}}},
-  {libhowl, ".*", {git, "https://github.com/project-fifo/libhowl.git", {branch, "test"}}},
+  {libsniffle, ".*", {git, "https://github.com/project-fifo/libsniffle.git", {branch, "master"}}},
+  {libchunter, ".*", {git, "https://github.com/project-fifo/libchunter.git", {branch, "master"}}},
+  {libsnarl, ".*", {git, "https://github.com/project-fifo/libsnarl.git", {branch, "master"}}},
+  {libhowl, ".*", {git, "https://github.com/project-fifo/libhowl.git", {branch, "master"}}},
   smurf,
   {fifo_dt, ".*", {git, "https://github.com/project-fifo/fifo_dt.git", {branch, "master"}}},
   {fifo_spec, ".*", {git, "https://github.com/project-fifo/fifo_spec.git", {branch, "test"}}},
