--- a/rel/vars.config
+++ b/rel/vars.config
@@ -1,5 +1,5 @@
 {log_path,              "/var/log/chunter"}.
-{crash_dump,            "/var/log/chunter"}.
+{crash_dump,            "/var/log/chunter/erlang.crashdump"}.
 {db_path,               "/var/tmp"}.
 {node,                  "chunter@127.0.0.1"}.
 {cookie,                "chunter"}.
