Add missing schema

--- a/rebar.config
+++ b/rebar.config
@@ -71,6 +71,7 @@
     {template, "_build/default/lib/libsnarl/priv/libsnarl.schema", "share/schema/02-libsnarl.schema"},
     {template, "_build/default/lib/mdns_client_lib/priv/mdns_client.schema", "share/schema/03-mdns_client.schema"},
     {template, "_build/default/lib/fifo_lager/priv/lager.schema", "share/schema/04-lager.schema"},
+    {template, "_build/default/lib/fifo_s3/priv/fifo_s3.schema", "share/schema/05-fifo_S3.schema"},
     {template, "schema/erlang_vm.schema", "share/schema/05-vm.schema"},
     {template, "rel/files/chunter", "bin/chunter"},
     {template, "rel/files/update", "bin/update"},
