--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
  [
   {fifo_lager, ".*", {git, "https://github.com/project-fifo/fifo_lager.git", {branch, "master"}}},
   {bugsnag, ".*", {git, "https://github.com/project-fifo/bugsnag-erlang.git", {branch, "master"}}},
-  {jsx, "1.4.5"},
+  jsone,
   {erlsom, ".*", {git, "https://github.com/willemdj/erlsom.git", {ref, "bc48604f7a74440da66aa7dba95a3bf634fdf138"}}},
   {ranch, "1.1.*", {git, "https://github.com/extend/ranch.git", {tag, "1.1.0"}}},
   erltrace,
