--- a/rebar.config
+++ b/rebar.config
@@ -28,7 +28,7 @@
 
 {plugins, [pc]}.
 
-{project_plugins, [{rebar3_cuttlefish, "0.8.0"}]}.
+{project_plugins, [{rebar3_cuttlefish, "~>0.14.0"}]}.
 
 %% Cuttlefish config
 {cuttlefish,
