--- a/rel/vars.config
+++ b/rel/vars.config
@@ -9,5 +9,6 @@
 {cuttlefish_conf,       "chunter.conf"}.
 
 {bugsnag_app,           "chunter"}.
-{bugsnag_release_state, "test"}.
 {bugsnag_app_version,   "0.9.2"}.
+
+"build.conf".
