--- a/rel/bootstrap/Makefile
+++ b/rel/bootstrap/Makefile
@@ -12,6 +12,9 @@ clean:
 bootstrap: 
 	cp install.sh $(BASENAME)
 	cp -r ../../_build/prod/rel/$(COMPONENT) $(COMPONENT)
+	cp ../all/share/chunter-diag $(COMPONENT)/share/
+	cp ../smartos/share/chunter.xml $(COMPONENT)/share/
+	cp ../smartos/share/guess_ip.sh $(COMPONENT)/share/
 	-mkdir $(COMPONENT)/share/lib
 	cp /opt/local/lib/libncurses.so.6 $(COMPONENT)/share/lib/libncurses.so.6
 	cp /opt/local/lib/libcrypto.so.1.0.0 $(COMPONENT)/share/lib/libcrypto.so.1.0.0
