--- a/rebar.config
+++ b/rebar.config
@@ -60,9 +60,9 @@
     {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
     %% for some reason this is only in default
 
-    {copy, "share/chunter-diag", "share/chunter-diag"},
-    {copy, "share/chunter.xml", "share/chunter.xml"},
-    {copy, "share/guess_ip.sh", "share/guess_ip.sh"},
+%    {copy, "share/chunter-diag", "share/chunter-diag"},
+ %   {copy, "share/chunter.xml", "share/chunter.xml"},
+%    {copy, "share/guess_ip.sh", "share/guess_ip.sh"},
 
     {copy, "_build/default/lib/fifo_utils/priv/update_config.sh", "share/"},
     {template, "schema/chunter.schema", "share/schema/00-chunter.schema"},
